syntax = "proto3";

option go_package = "visualjerk.de/challengers/grpc";

service Game {
  rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse) {}
  rpc CreateGame(CreateGameRequest) returns (CreateGameResponse) {}
  rpc PlayerAction(PlayerActionRequest) returns (PlayerActionResponse) {}
  rpc GameEvents(GameEventsSubscriptionRequest) returns (stream GameEvent) {}
}

message CreateAccountRequest {}
message CreateAccountResponse {
  string token = 1;
}

message CreateGameRequest {}
message CreateGameResponse {
  string id = 1;
}

message PlayerActionRequest {
  string gameId = 1;
  optional string playerId = 2;
  oneof message {
    PlayerActionJoin player_join = 10;
    PlayerActionLeave player_leave = 11;
  }
}


message PlayerActionJoin {
  string name = 2;
}

message PlayerActionLeave {
  string playerId = 2;
}

message PlayerActionResponse {
  oneof response {
    Success success = 10;
    Error error = 11;
  }
}

message Success {}
message Error {
  string message = 1;
}

message GameEventsSubscriptionRequest {
  string gameId = 1;
}

message GameEvent {
  string id = 1;
  string date = 2;
  oneof message {
    PlayerJoined player_joined = 10;
    PlayerLeft player_left = 11;
  };
}

message PlayerJoined {
  string id = 1;
  string name = 2;
}

message PlayerLeft {
  string id = 1;
  string name = 2;
}
